<resources>
    <string name="app_name">Inventory App</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="textview_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product Name</string>

    <!-- Label for the supplier name in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Label for the supplier phone number in the editor [NUM LIMIT=15] -->
    <!--15 is the max number for a phone number-->
    <string name="hint_supplier_phonenumber">555 555 555</string>

    <!-- Label for the in stock spinner  in the editor -->
    <string name="textview_in_stock">In Stock</string>
    <!-- Label for dropdown menu option if the boos is in stock  -->
    <string name="in_stock">In Stock</string>
    <!-- Label for dropdown menu option if the book in not in stock  -->
    <string name="not_in_stock">Not in Stock</string>

    <!-- Label for the price in the editor  -->
    <string name="textview_price">price</string>
    <!-- Label for the price hint in the editor [NUM LIMIT=10] -->
    <string name="hint_price">price</string>
    <!-- Label for the price hint in the editor [CHAR LIMIT=30] -->
    <string name="currency_price">€</string>

    <!-- Label for the quantity in the editor [CHAR LIMIT=30] -->
    <string name="textview_quantity">Quantity</string>
    <string name="hint_quantity">quantity</string>

    <!-- MENUS OPTIONS-->
    <!-- Catalog menu -->
    <string name="action_insert_dummy_data">insert dummy data</string>
    <string name="action_delete_all_data">Delete all products</string>
    <!--edit menu-->
    <string name="action_save">save</string>

    <!-- EDIT PAGE -->
    <string name="edit_activity_update_existing_product">Edit product</string>
    <string name="edit_activity_add_new_product">Add a product</string>

    <!-- LOG -->
    <string name="error_log_provider_insert_one_book">Failed to insert row for</string>
    <string name="editor_insert_book_failed">Fail to save in the database</string>
    <string name="editor_insert_book_successful">Your book has been successfully saved</string>
    <string name="empty_shelf_message">Oops, looks like the shelf is empty</string>
    <string name="empty_shelf_action">Start your inventory by adding a book</string>
    <string name="missing_info_for_successful_save">one or more pieces of information is missing</string>
    <string name="unsaved_changed_dialog_msg">Oopsy! You haven\'t saved your information. Wanna quit and discard any changes?</string>
    <string name="discard_msg">discard</string>
    <string name="keep_editing">keep editing</string>
    <string name="action_delete">delete</string>

    <!-- Dialog message to ask the user to confirm deleting all the product [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="editor_delete_all_product_failed">your products were not deleted</string>
    <string name="editor_delete_all_product_successful">all your products were deleted successfully</string>
    <string name="supplier_unknown">Supplier unknown</string>
    <string name="supplier_phonenumber_unknown">Supplier phone number unknown</string>
    <string name="editor_quantity_negative_error_msg">Your quantity cannot be negative</string>
    <string name="editor_update_book_failed">your book failed to update</string>
    <string name="editor_update_book_success">Your product has been successfully updated</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting your product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Edit page Button -->
    <string name="action_order">order</string>
    <string name="action_sale">sale</string>

    <!--ERROR MESSAGE -->
    <string name="unknown_uri_error_msg">Cannot query unknown URI</string>
    <string name="no_null_product_name_error_msg">The name of the product is required</string>
    <string name="no_null_stock_error_msg">Stock value is required</string>
    <string name="no_negative_price_error_msg">The price cannot be negative</string>
    <string name="deletion_no_supported_error_msg">deletion  is not supported for</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="no_null_supplier_name_error_msg">The supplier name is required</string>
    <string name="no_null_supplier_phone_error_msg">supplier\'s phone number is required</string>
    <string name="editor_quantity_too_high_error_msg">Your quantity cannot go beyond 9 digits</string>


</resources>
