<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".EditActivity">

        <!-- OVERVIEW: product name, supplier name, supplier phone number category -->
        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="150dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="23dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/textview_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- PRODUCT NAME field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords"
                    android:maxLength="30"/>

                <!-- SUPPLIER NAME field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_name"
                    android:maxLength="30"
                    android:inputType="textCapWords" />

                <!-- PHONE NUMBER field -->
                <EditText
                    android:id="@+id/edit_supplier_phone_number"
                    style="@style/EditorFieldStyle"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_supplier_phonenumber"
                    android:maxLength="15"
                    android:inputType="phone" />
            </LinearLayout>

        </LinearLayout>

        <!-- IN STOCK category -->
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="145dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="99dp"
                android:text="@string/textview_in_stock" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- In stock drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_in_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout> <!-- end of IN STOCK FIELD -->

        <!-- PRODUCT PRICE field -->
        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="87dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="23dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/textview_price" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- PRICE field -->

                <EditText
                    android:id="@+id/edit_price"
                    android:hint="@string/hint_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="10"/>

                <!-- CURRENCY (eu) -->
                <TextView
                    android:id="@+id/label_currency_units"
                    android:text="@string/currency_price"
                    style="@style/EditorCurrencyStyle"/>

            </RelativeLayout>

        </LinearLayout> <!--end of PRICE FIELD-->

        <!-- QUANTITY field -->
        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/textview_quantity" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp">

                <!-- QUANTITY field -->
                <EditText
                    android:id="@+id/edit_quantity"
                    android:hint="@string/hint_quantity"
                    android:inputType="number"
                    android:maxLength="10"
                    style="@style/EditorFieldStyle" />

            </RelativeLayout>
            <!--quantity button -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <Button
                    android:id="@+id/quantity_increase"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:layout_toRightOf="@+id/label_currency_units" />
                <Button
                    android:id="@+id/quantity_decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:layout_toRightOf="@+id/label_currency_units" />
            </LinearLayout>

        </LinearLayout> <!--end of PRICE FIELD-->
        <!-- ACTION BUTTON -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/action_delete"
                style="@style/action_button"
                android:text="@string/action_delete"
                android:backgroundTint="@color/warning" />
            <Button
                android:id="@+id/action_order"
                style="@style/action_button"
                android:text="@string/action_order"
                android:backgroundTint="@color/action"
                android:layout_alignParentRight="true" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>